--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,7 +16,9 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
-      <ul class="play-list"></ul>
+      <ul class="play-list">
+
+      </ul>
     </div>
     <div class="weather">
       <input type="text" class="city" />
@@ -49,6 +51,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 </html>
