feat: add wind-speed and humidity

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -27,6 +27,8 @@
       <div class="description-container">
         <span class="temperature"></span>
         <span class="weather-description"></span>
+        <span class="wind-speed"></span>
+        <span class="humidity"></span>
       </div>
       <div class="wind"></div>
       <div class="humidity"></div>
