--- a/momentum/index.html
+++ b/momentum/index.html
@@ -6,19 +6,41 @@
   <link href="assets/favicon.ico" rel="shortcut icon" />
   <link rel="stylesheet" href="css/owfont-regular.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title>momentum</title>
 </head>
 <body>
   <header class="header">
     <div class="player">
-      <div class="player-controls">
-        <button class="play-prev player-icon"></button>
-        <button class="play player-icon"></button>
-        <button class="play-next player-icon"></button>
+      <div class="song-details">
+        <p class="song-name"></p>
+        <p class="artist"></p>
       </div>
-      <ul class="play-list">
-
-      </ul>
+      <div class="progress-area">
+        <div class="progress-bar"></div>
+        <div class="timer">
+          <span class="current"></span>
+          <span class="duration"></span>
+        </div>
+      </div>
+      <div class="slider_container">
+        <button class="volume-up"></button>
+        <input type="range" min="1" max="100" value="50" class="volume-slider">
+      </div>
+      <div class="controls">
+        <i id="more-music" class="material-icons more-music-icon controls_more-music-icon">queue_music</i>
+        <div class="player-controls">
+          <button class="play-prev player-icon"></button>
+          <button class="play player-icon"></button>
+          <button class="play-next player-icon"></button>
+        </div>
+      </div>
+      <div class="widget">
+        <div class="widget-container">
+          <ul class="play-list">
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="weather">
       <input type="text" class="city" />
